# Adv_MLA

./: Makefile  README.md  pyproject.toml
data/processed/: preprocessed_test.csv
docs/: Makefile  conf.py  index.rst  make.bat
models/: Bhutani_Saumya_14360820_kaggle_submission.csv  Bhutani_Saumya_14360820_kaggle_submission_PartA.csv  Bhutani_Saumya_14360820_kaggle_submission_PartB.csv  Bhutani_Saumya_14360820_kaggle_submission_PartC.csv
notebooks/: Bhutani_Saumya_14360820_week1_xgboost.ipynb  Bhutani_Saumya_14360820_week2_adaboost.ipynb  Bhutani_Saumya_14360820_week3_xgb_hyperparameter_tunning.ipynb  Bhutani_Saumya_14360820_week4_gb_best_model.ipynb
src/data/: datapreprocess.py
src/models/: adaboost_model.joblib  gb_model.joblib  predict_model.py  scaler.joblib  train_model.py  xgboost_model.joblib
src/visualization/: visualize.py
