[tool.poetry]
name = "adv-mla"
version = "0.1.0"
description = ""
authors = ["bhutanisaumya <saumya.bhutani@student.uts.edu.au>"]
readme = "README.md"
packages = [{include = "adv_mla"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
